[package]
name = "demo"
version = "0.0.1"
edition = "2024"
description = "Chartistry demo site"
authors = [ "Joshua McQuistan <joshua.mcquistan@feral.io>" ]
license = "MPL-2.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
syntect = "5.2"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos-chartistry = { version = "0.2"}
leptos_meta = "0.8"
leptos_router = { version = "0.8.0" }
leptos-use = "0.16"
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
web-sys = "0.3"

# Pinned. Must also be specified in flake.nix
wasm-bindgen = "= 0.2.100"
